[package]
name = "arc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.9", features = [ "derive" ]}
clap_complete = "4.5.44"
dirs = "6.0.0"
futures = "0.3.28"
reqwest = { version = "0.12.12", features = [ "blocking", "json", "cookies" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.99"
thiserror = "2.0.11"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
